--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,46 +1,154 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
+    @timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
 
-    <h3 class="header-highlight display-4 text-center">Class Timetable</h3>
+        <h3 class="header-highlight display-4 text-center">Class Timetable</h3>
 
-    <section id="class-timetable-section">
-        <div class="container">
-            <div class="row bg-primary text-light">
-                <div class="col-md-1"></div>
-                <div class="col-md-3 ">Early Morning</div>
-                <div class="col-md-1">Break</div>
-                <div class="col-md-3 ">Late Morning</div>
-                <div class="col-md-1">Lunch</div>
-                <div class="col-md-3 order">Afternoon</div>
-            </div>
-            <div class="row">
-                <div class="col-md-1 bg-primary text-light" >Tuesday</div>
-                <div class="col-md-3 ">
-                    <div class="row">
-                        <div class="col-6 rounded subject-maths">Maths
-                            <button type="button" class="close" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+        <section id="class-timetable-section">
+            <div class="container">
+
+
+
+                <div class="row headline-row text-primary">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3 timetable-header">Early Morning</div>
+                    <div class="col-sm-1 small-column text-center">B</div>
+                    <div class="col-sm-3 timetable-header">Late Morning</div>
+                    <div class="col-sm-1 small-column text-center">L</div>
+                    <div class="col-sm-3 order timetable-header">Afternoon</div>
+                </div>
+
+
+                <div class="row dayoftheweek-row">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Monday</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <div class="col-12 rounded subject-maths">Maths
+                                <button type="button" class="close" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="col-6 rounded subject-physical-education">P.E.</div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-4 rounded subject-reading">Reading</div>
+                            <div class="col-4 rounded subject-spelling">Spelling</div>
+                            <div class="col-4 rounded subject-ict">ICT</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-12 rounded subject-topic">Topic</div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3">
-                    <div class="row">
-                        <div class="col-8 rounded subject-writing">Writing</div>
-                        <div class="col-4 rounded subject-music">Music</div>
+                <div class="row dayoftheweek-row">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tuesday</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <div class="col-6 rounded subject-maths">Maths
+                                <button type="button" class="close" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="col-6 rounded subject-physical-education">P.E.</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-8 rounded subject-writing">Writing</div>
+                            <div class="col-4 rounded subject-music">Music</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-12 rounded subject-topic">Topic</div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3">
-                    <div class="row">
-                        <div class="col-12 rounded subject-topic">Topic</div>
+
+
+                <div class="row dayoftheweek-row">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wednesday</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <div class="col-6 rounded subject-reading">Reading</div>
+                            <div class="col-6 rounded subject-spelling">Spelling</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-8 rounded subject-maths">Maths</div>
+                            <div class="col-4 rounded subject-drama">Drama</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-6 rounded subject-physical-education">P.E.</div>
+                            <div class="col-6 rounded subject-health">Health</div>
+                        </div>
                     </div>
                 </div>
+
+
+                <div class="row dayoftheweek-row">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thursday</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <div class="col-6 rounded subject-maths">Maths</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-4 rounded subject-reading">Reading</div>
+                            <div class="col-8 rounded subject-topic">IDL</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-12 rounded subject-teacher-covertime">RCCT -TODO: contain subjects</div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row dayoftheweek-row">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Friday</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <div class="col-8 rounded subject-spelling">Spelling</div>
+                            <div class="col-4 rounded subject-reading">Reading</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-8 rounded subject-maths">Maths</div>
+                            <div class="col-4 rounded subject-topic">IDL</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-6 rounded subject-assembly">Assembly</div>
+                            <div class="col-6 rounded subject-golden-time">Golden Time</div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-        </div>
-    </section>
-}
+
+        </section>
+    }
