statically class timetable looking to take shape

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -8,145 +8,143 @@
         <section id="class-timetable-section">
             <div class="container">
 
-
-
                 <div class="row headline-row text-primary">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-3 timetable-header">Early Morning</div>
-                    <div class="col-sm-1 small-column text-center">B</div>
+                    <div class="col-sm-1 small-column text-center">Break</div>
                     <div class="col-sm-3 timetable-header">Late Morning</div>
-                    <div class="col-sm-1 small-column text-center">L</div>
+                    <div class="col-sm-1 small-column text-center">Lunch</div>
                     <div class="col-sm-3 order timetable-header">Afternoon</div>
                 </div>
 
+                <div class="row"><br></div>
 
-                <div class="row dayoftheweek-row">
-                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Monday</div>
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Mon</div>
                     <div class="col-sm-3 ">
                         <div class="row">
-                            <div class="col-12 rounded subject-maths">Maths
-                                <button type="button" class="close" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+                            <button class="col-12 rounded subject subject-maths">
+                                Maths
+                            </button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-4 rounded subject-reading">Reading</div>
-                            <div class="col-4 rounded subject-spelling">Spelling</div>
-                            <div class="col-4 rounded subject-ict">ICT</div>
+                            <button class="col-4 rounded subject subject-reading">Reading</button>
+                            <button class="col-4 rounded subject subject-spelling">Spelling</button>
+                            <button class="col-4 rounded subject subject-ict">ICT</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
 
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-12 rounded subject-topic">Topic</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row dayoftheweek-row">
-                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tuesday</div>
-                    <div class="col-sm-3 ">
-                        <div class="row">
-                            <div class="col-6 rounded subject-maths">Maths
-                                <button type="button" class="close" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="col-6 rounded subject-physical-education">P.E.</div>
-                        </div>
-                    </div>
-                    <div class="col-sm-1 small-column"></div>
-                    <div class="col-sm-3">
-                        <div class="row">
-                            <div class="col-8 rounded subject-writing">Writing</div>
-                            <div class="col-4 rounded subject-music">Music</div>
-                        </div>
-                    </div>
-                    <div class="col-sm-1 small-column"></div>
-                    <div class="col-sm-3">
-                        <div class="row">
-                            <div class="col-12 rounded subject-topic">Topic</div>
+                            <button class="col-12 rounded subject subject-topic">Topic</button>
                         </div>
                     </div>
                 </div>
 
+                <div class="row"><br></div>
 
-                <div class="row dayoftheweek-row">
-                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wednesday</div>
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tue</div>
                     <div class="col-sm-3 ">
                         <div class="row">
-                            <div class="col-6 rounded subject-reading">Reading</div>
-                            <div class="col-6 rounded subject-spelling">Spelling</div>
+                            <button class="col-6 rounded subject subject-maths">Maths</button>
+                            <button class="col-6 rounded subject subject-physical-education">P.E.</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-8 rounded subject-maths">Maths</div>
-                            <div class="col-4 rounded subject-drama">Drama</div>
+                            <button class="col-8 rounded subject subject-writing">Writing</button>
+                            <button class="col-4 rounded subject subject-music">Music</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-6 rounded subject-physical-education">P.E.</div>
-                            <div class="col-6 rounded subject-health">Health</div>
+                            <button class="col-12 rounded subject subject-topic">Topic</button>
                         </div>
                     </div>
                 </div>
 
+                <div class="row"><br></div>
 
-                <div class="row dayoftheweek-row">
-                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thursday</div>
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wed</div>
                     <div class="col-sm-3 ">
                         <div class="row">
-                            <div class="col-6 rounded subject-maths">Maths</div>
+                            <button class="col-6 rounded subject subject-reading">Reading</button>
+                            <button class="col-6 rounded subject subject-spelling">Spelling</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-4 rounded subject-reading">Reading</div>
-                            <div class="col-8 rounded subject-topic">IDL</div>
+                            <button class="col-8 rounded subject subject-maths">Maths</button>
+                            <button class="col-4 rounded subject subject-drama">Drama</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-12 rounded subject-teacher-covertime">RCCT -TODO: contain subjects</div>
+                            <button class="col-6 rounded subject subject-physical-education">P.E.</button>
+                            <button class="col-6 rounded subject subject-health">Health</button>
                         </div>
                     </div>
                 </div>
 
+                <div class="row"><br></div>
 
-                <div class="row dayoftheweek-row">
-                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Friday</div>
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thu</div>
                     <div class="col-sm-3 ">
                         <div class="row">
-                            <div class="col-8 rounded subject-spelling">Spelling</div>
-                            <div class="col-4 rounded subject-reading">Reading</div>
+                            <button class="col-12 rounded subject subject-maths">Maths</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-8 rounded subject-maths">Maths</div>
-                            <div class="col-4 rounded subject-topic">IDL</div>
+                            <button class="col-4 rounded subject subject-reading">Reading</button>
+                            <button class="col-8 rounded subject subject-topic">IDL</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <div class="col-6 rounded subject-assembly">Assembly</div>
-                            <div class="col-6 rounded subject-golden-time">Golden Time</div>
+                            <button class="col-12 rounded subject subject-teacher-covertime">RCCT -TODO: contain subjects</button>
                         </div>
                     </div>
                 </div>
 
+                <div class="row"><br></div>
+
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Fri</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button class="col-8 rounded subject subject-spelling">Spelling</button>
+                            <button class="col-4 rounded subject subject-reading">Reading</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button class="col-8 rounded subject subject-maths">Maths</button>
+                            <button class="col-4 rounded subject subject-topic">IDL</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button class="col-6 rounded subject subject-assembly">Assembly</button>
+                            <button class="col-6 rounded subject subject-golden-time">Golden Time</button>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
