--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -40,7 +40,7 @@
 
                     <div class="col-sm-3">
                         <div class="row">
-                            <button class="col-12 rounded subject subject-topic">Topic</button>
+                            <button class="col-12 rounded subject subject-topic">IDL</button>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <button class="col-12 rounded subject subject-topic">Topic</button>
+                            <button class="col-12 rounded subject subject-topic">IDL</button>
                         </div>
                     </div>
                 </div>
