--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -115,7 +115,11 @@
                     <div class="col-sm-1 small-column"></div>
                     <div class="col-sm-3">
                         <div class="row">
-                            <button class="col-12 rounded subject subject-teacher-covertime">RCCT -TODO: contain subjects</button>
+                            <button class="col-12 rounded teacher-cover subject-teacher-covertime">RCCT : Mr Smith</button>
+                        </div>
+                        <div class="row">
+                            <button class="col-6 rounded subject subject-writing">Writing</button>
+                            <button class="col-6 rounded subject subject-spelling">Spelling</button>
                         </div>
                     </div>
                 </div>
