break lunch color grey

--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -4,6 +4,7 @@
     /*padding-left: 0 !important;*/
     /*padding-right: 0 !important;*/
     font-size: smaller;
+    color: #999;
 }
 
 .timetable-header {
