Add Time To Teach logo and Simplifica font

--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/SudoStream_icon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
     </head>
     <body>
 
@@ -24,8 +24,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="@routes.Assets.versioned("icons/SudoStream_icon.png")" alt="logo" height="26">
-                <span class="display-5">Time To Teach</span>
+                <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
+                <span class="ttt-icon-writing display-5">Time to TEACH</span>
             </a>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
