--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -17,6 +17,11 @@
                     <div class="col-sm-3 order timetable-header">Afternoon</div>
                 </div>
 
+                <div class="row">
+                    <div class="col-sm-1 small-column"></div>
+                    <div class=""></div>
+                </div>
+
                 <div class="row dayoftheweek-row align-items-center">
                     <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Mon</div>
                     <div class="col-sm-3 ">
