--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/SudoStream_icon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
     </head>
     <body>
         <div class="d-none g-signin2" ></div>
@@ -26,8 +26,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="@routes.Assets.versioned("icons/SudoStream_icon.png")" alt="logo" height="26">
-                <span class="display-5">Time To Teach</span>
+                <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
+                <span class="ttt-icon-writing display-5">Time to TEACH</span>
             </a>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
@@ -62,7 +62,7 @@
 
         <div id="stage">
             <div id="stage-caption">
-                <h1 class="display-3">Time To Teach</h1>
+                <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
                 <h2 class="display-5">Easy planning for busy teachers</h2>
                 <p>Designed specfically for primary school teachers</p>
                 <a href="#pricing" class="btn btn-lg btn-success">Learn more</a>
