Added basic timeline for MOnday example

--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -1,47 +1,47 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-    @timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
+@timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
 
-        <h3 class="header-highlight display-3 text-center">Dashboard</h3>
+    <h3 class="header-highlight display-3 text-center">Dashboard</h3>
 
-        <section id="dashboardContent">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 dashboardFadedBackground">
-                        <h3 class="display-5 text-center">Planning</h3>
-                        <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
-                            Class Timetable</a>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
-                    </div>
-                    <div class="col-lg-1">
-                    </div>
-                    <div class="col-lg-5 dashboardFadedBackground">
-                        <h3 class="display-5 text-center">Resources</h3>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">IDL</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Lesson Ideas</button>
-                    </div>
+    <section id="dashboardContent">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 dashboardFadedBackground">
+                    <h3 class="display-5 text-center">Planning</h3>
+                    <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
+                        Class Timetable</a>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
                 </div>
-
-                <div class="row"><br></div>
-
-                <div class="row">
-                    <div class="col-lg-5 dashboardFadedBackground">
-                        <h3 class="display-5 text-center">Communication</h3>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">School Noticeboard</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Time To Teach Community</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Parents</button>
-                    </div>
-                    <div class="col-lg-1">
-                    </div>
-                    <div class="col-lg-5 dashboardFadedBackground">
-                        <h3 class="display-5 text-center">Admin & Reports</h3>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Staff</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Classrooms</button>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Reports</button>
-                    </div>
+                <div class="col-sm-1">
+                </div>
+                <div class="col-sm-5 dashboardFadedBackground">
+                    <h3 class="display-5 text-center">Resources</h3>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">IDL</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Lesson Ideas</button>
                 </div>
             </div>
-        </section>
-    }
+
+            <div class="row"><br></div>
+
+            <div class="row">
+                <div class="col-sm-5 dashboardFadedBackground">
+                    <h3 class="display-5 text-center">Communication</h3>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">School Noticeboard</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Time To Teach Community</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Parents</button>
+                </div>
+                <div class="col-sm-1">
+                </div>
+                <div class="col-sm-5 dashboardFadedBackground">
+                    <h3 class="display-5 text-center">Admin & Reports</h3>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Staff</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Classrooms</button>
+                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Reports</button>
+                </div>
+            </div>
+        </div>
+    </section>
+}
