--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -22,6 +22,53 @@
                     <div class=""></div>
                 </div>
 
+                <div class="row timetable-time-row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">09:00</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">10:30</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">10:45</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">11:15</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">11:45</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">12:15</div>
+                            <div class="col-sm-11"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-sm-1 timetable-time">1:15</div>
+                            <div class="col-sm-10"></div>
+                            <div class="col-sm-1 timetable-time">3:00</div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row dayoftheweek-row align-items-center">
                     <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Mon</div>
                     <div class="col-sm-3 ">
